--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,15 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>JavaDistribute</name>
 	<description>Java分布式基础</description>
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.5.2</version>
+		</dependency>
 
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
