--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
 			<classifier>jdk15</classifier>
 			<version>2.4</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.mina/mina-core -->
+		<dependency>
+			<groupId>org.apache.mina</groupId>
+			<artifactId>mina-core</artifactId>
+			<version>2.0.17</version>
+		</dependency>
 
 	</dependencies>
 	<build>
